--- a/app/views/home.html
+++ b/app/views/home.html
@@ -865,7 +865,7 @@
                         <div style="text-align:justify;"><img src="http://www.patrickborrelli.com/images/dropP.jpg" style="padding-right: 5px; padding-bottom: 10px; float: left;"/>layer Character (PC) skills are utilized in many aspects of gameplay. In the 5th Edition rules, all players have some level of all skills, based on the ability associated with a particular skill. For example, a player who has a Strength score of 14 gets a +2 modifier for Strength. So for any Strength related skills (Athletics), the player will get the same bonus to that particular skill.<br/><br/>Additionally, depending on their character class, players get to choose a proficiency in some number of skills. The character class may also limit the list of skills a character can be proficient in (i.e., a Fighter can choose two skills to be proficient in from Acrobatics, Animal Handling, Athletics, History, Insight, Intimidation, Perception and Survival). Any skill a player is proficient in has the player's proficiency bonus applied to that skill as well.</div><br/>
                         <div style="color: maroon;">{{classString}}</div><br/>
                         <div style="color: maroon;">{{raceString}}</div><br/>
-                        <button type="button" class="btn btn-sm btn-info btn-custom125" ng-click="saveCurrentAbilities();">Next</button><br/>
+                        <button type="button" class="btn btn-sm btn-info btn-custom125" ng-click="saveCurrentSkills();">Next</button><br/>
                         <button type="button" class="btn btn-sm btn-info btn-custom125" ng-click="switchTab(activeIndex - 1);">Previous</button>
                     </div>
                     <form>
@@ -874,109 +874,109 @@
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('ACRO')" ng-hide="acroDisabled">INFO</button>
                             <label ng-hide="acroDisabled">
-                                <input type="checkbox"> Acrobatics (Dex)
+                                <input type="checkbox" ng-model="skillForm.acrobatics"> Acrobatics (Dex)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('ANIM')" ng-hide="animDisabled">INFO</button>
                             <label ng-hide="animDisabled">
-                                <input type="checkbox"> Animal Handling (Wis)
+                                <input type="checkbox" ng-model="skillForm.animal_handling"> Animal Handling (Wis)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('ARCA')" ng-hide="arcaDisabled">INFO</button>
                             <label ng-hide="arcaDisabled">
-                                <input type="checkbox"> Arcana (Int)
+                                <input type="checkbox" ng-model="skillForm.arcana"> Arcana (Int)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('ATHL')" ng-hide="athlDisabled">INFO</button>
                             <label ng-hide="athlDisabled">
-                                <input type="checkbox"> Athletics (Str)
+                                <input type="checkbox" ng-model="skillForm.athletics"> Athletics (Str)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('DECE')" ng-hide="deceDisabled">INFO</button>
                             <label ng-hide="deceDisabled">
-                                <input type="checkbox"> Deception (Cha)
+                                <input type="checkbox" ng-model="skillForm.deception"> Deception (Cha)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('HIST')" ng-hide="histDisabled">INFO</button>
                             <label ng-hide="histDisabled">
-                                <input type="checkbox"> History (Int)
+                                <input type="checkbox" ng-model="skillForm.history"> History (Int)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('INSI')" ng-hide="insiDisabled">INFO</button>
                             <label ng-hide="insiDisabled">
-                                <input type="checkbox"> Insight (Wis)
+                                <input type="checkbox" ng-model="skillForm.insight"> Insight (Wis)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('INTI')" ng-hide="intiDisabled">INFO</button>
                             <label ng-hide="intiDisabled">
-                                <input type="checkbox"> Intimidation (Cha)
+                                <input type="checkbox" ng-model="skillForm.intimidation"> Intimidation (Cha)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('INVE')" ng-hide="inveDisabled">INFO</button>
                             <label ng-hide="inveDisabled">
-                                <input type="checkbox"> Investigation (Int)
+                                <input type="checkbox" ng-model="skillForm.investigation"> Investigation (Int)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('MEDI')" ng-hide="mediDisabled">INFO</button>
                             <label ng-hide="mediDisabled">
-                                <input type="checkbox"> Medicine (Wis)
+                                <input type="checkbox" ng-model="skillForm.medicine"> Medicine (Wis)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('NATU')" ng-hide="natuDisabled">INFO</button>
                             <label ng-hide="natuDisabled">
-                                <input type="checkbox"> Nature (Int)
+                                <input type="checkbox" ng-model="skillForm.nature"> Nature (Int)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('PERC')" ng-hide="percDisabled">INFO</button>
                             <label ng-hide="percDisabled">
-                                <input type="checkbox"> Perception (Wis)
+                                <input type="checkbox" ng-model="skillForm.perception"> Perception (Wis)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('PERF')" ng-hide="perfDisabled">INFO</button>
                             <label ng-hide="perfDisabled">
-                                <input type="checkbox"> Performance (Cha)
+                                <input type="checkbox" ng-model="skillForm.performance"> Performance (Cha)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('PERS')" ng-hide="persDisabled">INFO</button>
                             <label ng-hide="persDisabled">
-                                <input type="checkbox"> Persuasion (Cha)
+                                <input type="checkbox" ng-model="skillForm.persuasion"> Persuasion (Cha)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('RELI')" ng-hide="reliDisabled">INFO</button>
                             <label ng-hide="reliDisabled">
-                                <input type="checkbox"> Religion (Int)
+                                <input type="checkbox" ng-model="skillForm.religion"> Religion (Int)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('SLEI')" ng-hide="sleiDisabled">INFO</button>
                             <label ng-hide="sleiDisabled">
-                                <input type="checkbox"> Sleight of Hand (Dex)
+                                <input type="checkbox" ng-model="skillForm.sleight_of_hand"> Sleight of Hand (Dex)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('STEA')" ng-hide="steaDisabled">INFO</button>
                             <label ng-hide="steaDisabled">
-                                <input type="checkbox"> Stealth (Dex)
+                                <input type="checkbox" ng-model="skillForm.stealth"> Stealth (Dex)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('SURV')" ng-hide="survDisabled">INFO</button>
                             <label ng-hide="survDisabled">
-                                <input type="checkbox"> Survival (Wis)
+                                <input type="checkbox" ng-model="skillForm.survival"> Survival (Wis)
                             </label>
                         </div>
                     </div>  
@@ -984,48 +984,47 @@
                         <div class="col-xs-12>"><h3>Languages</h3></div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" ng-disabled="commonDisabled" ng-checked="commonSelected"> Common
+                                <input type="checkbox" ng-disabled="commonDisabled" ng-model="skillForm.common"> Common
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"  ng-disabled="dwarvishDisabled" ng-checked="dwarvishSelected"> Dwarvish
+                                <input type="checkbox"  ng-disabled="dwarvishDisabled" ng-model="skillForm.dwarvish"> Dwarvish
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"  ng-disabled="elvishDisabled" ng-checked="elvishSelected"> Elvish
+                                <input type="checkbox"  ng-disabled="elvishDisabled" ng-checked="elvishSelected" ng-model="skillForm.elvish"> Elvish
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"  ng-disabled="giantDisabled" ng-checked="giantSelected"> Giant
+                                <input type="checkbox"  ng-disabled="giantDisabled" ng-checked="giantSelected" ng-model="skillForm.giant"> Giant
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"  ng-disabled="gnomishDisabled" ng-checked="gnomishSelected"> Gnomish
+                                <input type="checkbox"  ng-disabled="gnomishDisabled" ng-checked="gnomishSelected" ng-model="skillForm.gnomish"> Gnomish
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"  ng-disabled="goblinDisabled" ng-checked="goblinSelected"> Goblin
+                                <input type="checkbox"  ng-disabled="goblinDisabled" ng-checked="goblinSelected" ng-model="skillForm.goblin"> Goblin
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"  ng-disabled="halflingDisabled" ng-checked="halflingSelected"> Halfling
+                                <input type="checkbox"  ng-disabled="halflingDisabled" ng-checked="halflingSelected" ng-model="skillForm.halfling"> Halfling
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"  ng-disabled="orcishDisabled" ng-checked="orcishSelected"> Orcish
+                                <input type="checkbox"  ng-disabled="orcishDisabled" ng-checked="orcishSelected" ng-model="skillForm.orcish"> Orcish
                             </label>
                         </div>
                     </div> 
                     </form>
-                </div>
-            
+                </div>            
             </uib-tab>
             <uib-tab index="6" heading="Equipment" disable="equipDisabled">Equipment</uib-tab>            
             <uib-tab index="7" heading="Spellcasting" disable="spellsDisabled">Spellcasting</uib-tab>
