--- a/app/views/home.html
+++ b/app/views/home.html
@@ -853,7 +853,7 @@
                             <input type="text" disabled style="width: 40px; height: 40px; margin-bottom: 4px; margin-right: 5px; padding: 0px;" ng-model="abilityForm.intTotal">Intelligence
                         </div>
                         <div class="col-xs-12">
-                            <input type="text" disabled style="width: 40px; height: 40px; margin: 0px; margin-right: 5px; padding: 0px;" ng-model="abilityForm.chaTotal">Charism
+                            <input type="text" disabled style="width: 40px; height: 40px; margin: 0px; margin-right: 5px; padding: 0px;" ng-model="abilityForm.chaTotal">Charisma
                         </div>                        
                     </div> 
                     </form>
@@ -874,109 +874,109 @@
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('ACRO')" ng-hide="acroDisabled">INFO</button>
                             <label ng-hide="acroDisabled">
-                                <input type="checkbox" ng-model="skillForm.acrobatics"> Acrobatics (Dex)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.acrobatics" value=true> Acrobatics (Dex)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('ANIM')" ng-hide="animDisabled">INFO</button>
                             <label ng-hide="animDisabled">
-                                <input type="checkbox" ng-model="skillForm.animal_handling"> Animal Handling (Wis)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.animal_handling" value=true> Animal Handling (Wis)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('ARCA')" ng-hide="arcaDisabled">INFO</button>
                             <label ng-hide="arcaDisabled">
-                                <input type="checkbox" ng-model="skillForm.arcana"> Arcana (Int)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.arcana" value=true> Arcana (Int)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('ATHL')" ng-hide="athlDisabled">INFO</button>
                             <label ng-hide="athlDisabled">
-                                <input type="checkbox" ng-model="skillForm.athletics"> Athletics (Str)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.athletics" value=true> Athletics (Str)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('DECE')" ng-hide="deceDisabled">INFO</button>
                             <label ng-hide="deceDisabled">
-                                <input type="checkbox" ng-model="skillForm.deception"> Deception (Cha)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.deception" value=true> Deception (Cha)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('HIST')" ng-hide="histDisabled">INFO</button>
                             <label ng-hide="histDisabled">
-                                <input type="checkbox" ng-model="skillForm.history"> History (Int)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.history" value=true> History (Int)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('INSI')" ng-hide="insiDisabled">INFO</button>
                             <label ng-hide="insiDisabled">
-                                <input type="checkbox" ng-model="skillForm.insight"> Insight (Wis)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.insight" value=true> Insight (Wis)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('INTI')" ng-hide="intiDisabled">INFO</button>
                             <label ng-hide="intiDisabled">
-                                <input type="checkbox" ng-model="skillForm.intimidation"> Intimidation (Cha)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.intimidation" value=true> Intimidation (Cha)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('INVE')" ng-hide="inveDisabled">INFO</button>
                             <label ng-hide="inveDisabled">
-                                <input type="checkbox" ng-model="skillForm.investigation"> Investigation (Int)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.investigation" value=true> Investigation (Int)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('MEDI')" ng-hide="mediDisabled">INFO</button>
                             <label ng-hide="mediDisabled">
-                                <input type="checkbox" ng-model="skillForm.medicine"> Medicine (Wis)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.medicine" value=true> Medicine (Wis)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('NATU')" ng-hide="natuDisabled">INFO</button>
                             <label ng-hide="natuDisabled">
-                                <input type="checkbox" ng-model="skillForm.nature"> Nature (Int)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.nature" value=true> Nature (Int)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('PERC')" ng-hide="percDisabled">INFO</button>
                             <label ng-hide="percDisabled">
-                                <input type="checkbox" ng-model="skillForm.perception"> Perception (Wis)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.perception" value=true> Perception (Wis)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('PERF')" ng-hide="perfDisabled">INFO</button>
                             <label ng-hide="perfDisabled">
-                                <input type="checkbox" ng-model="skillForm.performance"> Performance (Cha)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.performance" value=true> Performance (Cha)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('PERS')" ng-hide="persDisabled">INFO</button>
                             <label ng-hide="persDisabled">
-                                <input type="checkbox" ng-model="skillForm.persuasion"> Persuasion (Cha)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.persuasion" value=true> Persuasion (Cha)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('RELI')" ng-hide="reliDisabled">INFO</button>
                             <label ng-hide="reliDisabled">
-                                <input type="checkbox" ng-model="skillForm.religion"> Religion (Int)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.religion" value=true> Religion (Int)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('SLEI')" ng-hide="sleiDisabled">INFO</button>
                             <label ng-hide="sleiDisabled">
-                                <input type="checkbox" ng-model="skillForm.sleight_of_hand"> Sleight of Hand (Dex)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.sleight_of_hand" value=true> Sleight of Hand (Dex)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('STEA')" ng-hide="steaDisabled">INFO</button>
                             <label ng-hide="steaDisabled">
-                                <input type="checkbox" ng-model="skillForm.stealth"> Stealth (Dex)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.stealth" value=true> Stealth (Dex)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('SURV')" ng-hide="survDisabled">INFO</button>
                             <label ng-hide="survDisabled">
-                                <input type="checkbox" ng-model="skillForm.survival"> Survival (Wis)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.survival" value=true> Survival (Wis)
                             </label>
                         </div>
                     </div>  
@@ -984,42 +984,42 @@
                         <div class="col-xs-12>"><h3>Languages</h3></div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" ng-disabled="commonDisabled" ng-model="skillForm.common"> Common
+                                <input type="checkbox" name="common" class="myLanguages" ng-disabled="languagesDisabled()" checklist-model="skillForm.common" value=true> Common
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"  ng-disabled="dwarvishDisabled" ng-model="skillForm.dwarvish"> Dwarvish
+                                <input type="checkbox" name="dwarvish" class="myLanguages" ng-disabled="languagesDisabled()" checklist-model="skillForm.dwarvish" value=true> Dwarvish
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"  ng-disabled="elvishDisabled" ng-checked="elvishSelected" ng-model="skillForm.elvish"> Elvish
+                                <input type="checkbox"  name="elvish" class="myLanguages" ng-disabled="languagesDisabled()" ng-checked="elvishSelected" checklist-model="skillForm.elvish" value=true> Elvish
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"  ng-disabled="giantDisabled" ng-checked="giantSelected" ng-model="skillForm.giant"> Giant
+                                <input type="checkbox"  name="giant" class="myLanguages" ng-disabled="languagesDisabled()" ng-checked="giantSelected" checklist-model="skillForm.giant" value=true> Giant
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"  ng-disabled="gnomishDisabled" ng-checked="gnomishSelected" ng-model="skillForm.gnomish"> Gnomish
+                                <input type="checkbox"  name="gnomish" class="myLanguages" ng-disabled="languagesDisabled()" ng-checked="gnomishSelected" checklist-model="skillForm.gnomish" value=true> Gnomish
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"  ng-disabled="goblinDisabled" ng-checked="goblinSelected" ng-model="skillForm.goblin"> Goblin
+                                <input type="checkbox"  name="goblin" class="myLanguages" ng-disabled="languagesDisabled()" ng-checked="goblinSelected" checklist-model="skillForm.goblin" value=true> Goblin
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"  ng-disabled="halflingDisabled" ng-checked="halflingSelected" ng-model="skillForm.halfling"> Halfling
+                                <input type="checkbox"  name="halfling" class="myLanguages" ng-disabled="languagesDisabled()" ng-checked="halflingSelected" checklist-model="skillForm.halfling" value=true> Halfling
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"  ng-disabled="orcishDisabled" ng-checked="orcishSelected" ng-model="skillForm.orcish"> Orcish
+                                <input type="checkbox"  name="orcish" class="myLanguages" ng-disabled="languagesDisabled()" ng-checked="orcishSelected" nchecklistg-model="skillForm.orcish" value=true> Orcish
                             </label>
                         </div>
                     </div> 
@@ -1081,7 +1081,42 @@
                     </form>
                 </div>   
             </uib-tab>            
-            <uib-tab index="7" heading="Spellcasting" disable="spellsDisabled">Spellcasting</uib-tab>
+            <uib-tab index="7" heading="Spellcasting" disable="spellsDisabled">            
+                <div class="col-xs-12">
+                    <div class="col-xs-4">  
+                        <div style="text-align:justify;"><img src="http://www.patrickborrelli.com/images/dropA.jpg" style="padding-right: 5px; padding-bottom: 10px; float: left;"/> spell is a discrete magical effect, a single shaping of the magical energies that suffuse the multiverse into a specific, limited expression. In casting a spell, a character carefully plucks at the invisible strands of raw magic suffusing the world, pins them in place in a particular pattern, sets them vibrating in a specific way, and then releases them to unleash the desired effect - in most cases, all in the span of seconds. Spells can be versatile tools, weapons, or protective wards. They can deal damage or undo it, impose or remove conditions, drain life energy away, and restore life to the dead.</div><br/>
+                        <div style="color: maroon;">{{cantripText}}</div><br/>
+                        <div style="color: maroon;">{{spellText}}</div><br/>
+                        <button type="button" class="btn btn-sm btn-info btn-custom125" ng-click="saveCurrentSpells();">Next</button><br/>
+                        <button type="button" class="btn btn-sm btn-info btn-custom125" ng-click="switchTab(activeIndex - 1);">Previous</button>
+                    </div>
+                    <form>
+                    <div class="col-xs-8">
+                        <div class="col-xs-12" style="padding-bottom: 20px;">
+                            <div class="col-xs-6" ng-show="hasCantrips()">
+                                <div class="col-xs-12">Cantrips:</div>
+                                <div class="col-xs-12" ng-repeat="cantrip in cantrips">
+                                    <label>
+                                        <input type="checkbox" class="myCantrips" ng-disabled="disableCantrips()" checklist-value="cantrip.name" checklist-model="selectedCantrips" />
+                                        {{cantrip.name}}
+                                    </label>
+                                </div>
+                            </div> 
+
+                            <div class="col-xs-6" ng-show="hasSpells()">
+                                <div class="col-xs-12">Spells:</div>
+                                <div class="col-xs-12" ng-repeat="spell in spells">
+                                    <label>
+                                        <input type="checkbox" class="mySpells" ng-disabled="disableSpells()" checklist-value="spell.name" checklist-model="selectedSpells" />
+                                        {{spell.name}}
+                                    </label>
+                                </div>
+                            </div> 
+                        </div>
+                    </div>
+                    </form>
+                </div>  
+            </uib-tab>
         </uib-tabset>
     </div>
 </div>
