Modification to handle limited checkbox selections in languages and skills

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -874,109 +874,109 @@
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('ACRO')" ng-hide="acroDisabled">INFO</button>
                             <label ng-hide="acroDisabled">
-                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.acrobatics" value=true> Acrobatics (Dex)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="selectedSkills" value="Acrobatics"> Acrobatics (Dex)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('ANIM')" ng-hide="animDisabled">INFO</button>
                             <label ng-hide="animDisabled">
-                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.animal_handling" value=true> Animal Handling (Wis)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="selectedSkills" value="Animal Handling"> Animal Handling (Wis)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('ARCA')" ng-hide="arcaDisabled">INFO</button>
                             <label ng-hide="arcaDisabled">
-                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.arcana" value=true> Arcana (Int)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="selectedSkills" value="Arcana"> Arcana (Int)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('ATHL')" ng-hide="athlDisabled">INFO</button>
                             <label ng-hide="athlDisabled">
-                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.athletics" value=true> Athletics (Str)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="selectedSkills" value="Athletics"> Athletics (Str)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('DECE')" ng-hide="deceDisabled">INFO</button>
                             <label ng-hide="deceDisabled">
-                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.deception" value=true> Deception (Cha)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="selectedSkills" value="Deception"> Deception (Cha)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('HIST')" ng-hide="histDisabled">INFO</button>
                             <label ng-hide="histDisabled">
-                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.history" value=true> History (Int)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="selectedSkills" value="History"> History (Int)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('INSI')" ng-hide="insiDisabled">INFO</button>
                             <label ng-hide="insiDisabled">
-                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.insight" value=true> Insight (Wis)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="selectedSkills" value="Insight"> Insight (Wis)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('INTI')" ng-hide="intiDisabled">INFO</button>
                             <label ng-hide="intiDisabled">
-                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.intimidation" value=true> Intimidation (Cha)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="selectedSkills" value="Intimidation"> Intimidation (Cha)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('INVE')" ng-hide="inveDisabled">INFO</button>
                             <label ng-hide="inveDisabled">
-                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.investigation" value=true> Investigation (Int)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="selectedSkills" value="Investigation"> Investigation (Int)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('MEDI')" ng-hide="mediDisabled">INFO</button>
                             <label ng-hide="mediDisabled">
-                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.medicine" value=true> Medicine (Wis)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="selectedSkills" value="Medicine"> Medicine (Wis)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('NATU')" ng-hide="natuDisabled">INFO</button>
                             <label ng-hide="natuDisabled">
-                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.nature" value=true> Nature (Int)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="selectedSkills" value="Nature"> Nature (Int)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('PERC')" ng-hide="percDisabled">INFO</button>
                             <label ng-hide="percDisabled">
-                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.perception" value=true> Perception (Wis)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="selectedSkills" value="Perception"> Perception (Wis)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('PERF')" ng-hide="perfDisabled">INFO</button>
                             <label ng-hide="perfDisabled">
-                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.performance" value=true> Performance (Cha)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="selectedSkills" value="Performance"> Performance (Cha)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('PERS')" ng-hide="persDisabled">INFO</button>
                             <label ng-hide="persDisabled">
-                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.persuasion" value=true> Persuasion (Cha)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="selectedSkills" value="Persuasion"> Persuasion (Cha)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('RELI')" ng-hide="reliDisabled">INFO</button>
                             <label ng-hide="reliDisabled">
-                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.religion" value=true> Religion (Int)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="selectedSkills" value="Religion"> Religion (Int)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('SLEI')" ng-hide="sleiDisabled">INFO</button>
                             <label ng-hide="sleiDisabled">
-                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.sleight_of_hand" value=true> Sleight of Hand (Dex)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="selectedSkills" value="Sleight of Hand"> Sleight of Hand (Dex)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('STEA')" ng-hide="steaDisabled">INFO</button>
                             <label ng-hide="steaDisabled">
-                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.stealth" value=true> Stealth (Dex)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="selectedSkills" value="Stealth"> Stealth (Dex)
                             </label>
                         </div>
                         <div class="checkbox">
                             <button type="button" class="btn btn-sm btn-default" ng-click="openInfo('SURV')" ng-hide="survDisabled">INFO</button>
                             <label ng-hide="survDisabled">
-                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="skillForm.survival" value=true> Survival (Wis)
+                                <input type="checkbox" class="mySkills" ng-disabled="disabledSkills()" checklist-model="selectedSkills" value="Survival"> Survival (Wis)
                             </label>
                         </div>
                     </div>  
@@ -984,42 +984,42 @@
                         <div class="col-xs-12>"><h3>Languages</h3></div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" name="common" class="myLanguages" ng-disabled="languagesDisabled()" checklist-model="skillForm.common" value=true> Common
+                                <input type="checkbox" name="common" class="myLanguages" ng-disabled="languagesDisabled()" checklist-model="selectedLanguages" value="Common"> Common
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" name="dwarvish" class="myLanguages" ng-disabled="languagesDisabled()" checklist-model="skillForm.dwarvish" value=true> Dwarvish
+                                <input type="checkbox" name="dwarvish" class="myLanguages" ng-disabled="languagesDisabled()" checklist-model="selectedLanguages" value="Dwarvish"> Dwarvish
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"  name="elvish" class="myLanguages" ng-disabled="languagesDisabled()" ng-checked="elvishSelected" checklist-model="skillForm.elvish" value=true> Elvish
+                                <input type="checkbox"  name="elvish" class="myLanguages" ng-disabled="languagesDisabled()" ng-checked="elvishSelected" checklist-model="selectedLanguages" value="Elvish"> Elvish
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"  name="giant" class="myLanguages" ng-disabled="languagesDisabled()" ng-checked="giantSelected" checklist-model="skillForm.giant" value=true> Giant
+                                <input type="checkbox"  name="giant" class="myLanguages" ng-disabled="languagesDisabled()" ng-checked="giantSelected" checklist-model="selectedLanguages" value="Giant"> Giant
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"  name="gnomish" class="myLanguages" ng-disabled="languagesDisabled()" ng-checked="gnomishSelected" checklist-model="skillForm.gnomish" value=true> Gnomish
+                                <input type="checkbox"  name="gnomish" class="myLanguages" ng-disabled="languagesDisabled()" ng-checked="gnomishSelected" checklist-model="selectedLanguages" value="Gnomish"> Gnomish
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"  name="goblin" class="myLanguages" ng-disabled="languagesDisabled()" ng-checked="goblinSelected" checklist-model="skillForm.goblin" value=true> Goblin
+                                <input type="checkbox"  name="goblin" class="myLanguages" ng-disabled="languagesDisabled()" ng-checked="goblinSelected" checklist-model="selectedLanguages" value="Goblin"> Goblin
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"  name="halfling" class="myLanguages" ng-disabled="languagesDisabled()" ng-checked="halflingSelected" checklist-model="skillForm.halfling" value=true> Halfling
+                                <input type="checkbox"  name="halfling" class="myLanguages" ng-disabled="languagesDisabled()" ng-checked="halflingSelected" checklist-model="selectedLanguages" value="Halfling"> Halfling
                             </label>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"  name="orcish" class="myLanguages" ng-disabled="languagesDisabled()" ng-checked="orcishSelected" nchecklistg-model="skillForm.orcish" value=true> Orcish
+                                <input type="checkbox"  name="orcish" class="myLanguages" ng-disabled="languagesDisabled()" ng-checked="orcishSelected" checklist-model="selectedLanguages" value="Orcish"> Orcish
                             </label>
                         </div>
                     </div> 
@@ -1116,6 +1116,20 @@
                     </div>
                     </form>
                 </div>  
+            </uib-tab>
+            <uib-tab index="8" heading="Summary" disable="summaryDisabled">
+                <div class="col-xs-12">
+                    <ul class="media-list">
+                        <li class="media">
+                            <div class="media-left media-top" >   
+                                Summary
+                            </div>
+                            <div class="media-body">
+                                  
+                            </div>                            
+                        </li>
+                    </ul>
+                </div>
             </uib-tab>
         </uib-tabset>
     </div>
