--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1118,17 +1118,26 @@
                 </div>  
             </uib-tab>
             <uib-tab index="8" heading="Summary" disable="summaryDisabled">
-                <div class="col-xs-12">
-                    <ul class="media-list">
-                        <li class="media">
-                            <div class="media-left media-top" >   
-                                Summary
-                            </div>
-                            <div class="media-body">
-                                  
-                            </div>                            
-                        </li>
-                    </ul>
+                <div class="row row-content">                    
+                    <div class="col-xs-12">
+                        <h4 ng-show="!hasCharacters()">No current characters.</h4>
+                        <ul class="media-list" ng-show="hasCharacters()">
+                            <li class="media" ng-repeat="character in characters " style="padding:10px; background: lightGray;">
+                                <div class="media-left media-top" >
+                                    <img class="media-object img-thumbnail" style="width: 75px;" ng-src={{facility.club_affiliation.logo_url}} alt="character image">
+                                </div>
+                                <div class="media-body">
+                                    <div class="col-xs-12">
+                                        <h3 class="media-heading" style="padding-top: 5px;">{{character.name}} - Level {{character.character_level}} {{character.race.name}} {{character.character_class.name}}</h3>
+                                        <div class="btn-group"> 
+                                            <button type="button" class="btn btn-xs btn-info" >Print Sheet</button>&nbsp;&nbsp;
+                                            <button type="button" class="btn btn-xs btn-info" ng-click="deleteCharacter(character._id);">Delete Record</button> 
+                                        </div>
+                                    </div>                                  
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </uib-tab>
         </uib-tabset>
